--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <title>El Blog de Juan</title>
     <meta property="og:title" content="Mi proyecto del curso de HTML/CSS"/>
-    <meta property="og:type" content="Blog Juan" />
-    <meta property="og:title" content="Blog Juan" />
-    <meta property="og:title" content="Blog Juan" />
+    <meta property="og:type" content="website" />
+    <meta proeprty="og:description" content="Proyecto Esencial html/css" />
+    <meta property="og:url" content="https://jap102321.github.io/esencial-html/" />
+    <meta property="og:image" content="https://jap102321.github.io/esencial-html2/images/dom.png" />
   </head>
   <body>
     <div class="hero"></div>
